feat: add statistics module
